src/passes/mnx2mnxsr/mnx2mnxsrParser.output
Terminals unused in grammar

    "measures"
    "clef"
    "notes"
    "name"
    "option"


Grammar

    0 $accept: MnxSource $end

    1 $@1: ε

    2 $@2: ε

    3 $@3: ε

    4 MnxSource: "{" Mnx $@1 "," Global $@2 "," Parts $@3 "}"

    5 Number: "integer number"
    6       | "double number"

    7 SingleString: "single quoted_string"
    8             | "double quoted_string"

    9 String: SingleString
   10       | String SingleString

   11 Mnx: "mnx" ":" "{" Version "}"

   12 Version: "version" ":" Number

   13 Global: "global" ":" "{" Measures "}"

   14 Parts: "parts" ":" "[" Part "]"

   15 Part: "{" Measures "}"

   16 Measures: "parts" ":" "[" Measure "]"

   17 Measure: "{" MeasureElements "}"

   18 MeasureElements: MeasureElement
   19                | MeasureElements MeasureElement

   20 MeasureElement: Clefs
   21               | Sequences

   22 Clefs: "clefs" ":" "[" Clef "]"

   23 Clef: ":" "{" "sign" ":" String "," "staffPosition" ":" Number "}"

   24 Sequences: "sequences" ":" "[" SequencesElements "]"

   25 SequencesElements: SequencesElement
   26                  | SequencesElements SequencesElement

   27 SequencesElement: Content

   28 Content: "content" ":" "[" ContentElements "]"

   29 ContentElements: ContentElement
   30                | ContentElements ContentElement

   31 ContentElement: Type Duration Notes

   32 Type: "type" ":" String

   33 Duration: "duration" ":" "{" DurationElements "}"

   34 DurationElements: DurationElement
   35                 | DurationElements DurationElement

   36 DurationElement: "base" ":" String

   37 Notes: "duration" ":" "[" NotesElements "]"

   38 NotesElements: NotesElement
   39              | NotesElements NotesElement

   40 NotesElement: Pitch

   41 Pitch: "pitch" ":" "{" "octave" ":" Number "," "step" ":" String "}"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ":" (258) 11 12 13 14 16 22 23 24 28 32 33 36 37 41
    "{" (259) 4 11 13 15 17 23 33 41
    "}" (260) 4 11 13 15 17 23 33 41
    "[" (261) 14 16 22 24 28 37
    "]" (262) 14 16 22 24 28 37
    "," (263) 4 23 41
    "mnx" (264) 11
    "version" (265) 12
    "global" (266) 13
    "parts" (267) 14 16
    "measures" (268)
    "sequences" (269) 24
    "clefs" (270) 22
    "clef" (271)
    "sign" (272) 23
    "staffPosition" (273) 23
    "content" (274) 28
    "type" (275) 32
    "duration" (276) 33 37
    "base" (277) 36
    "notes" (278)
    "pitch" (279) 41
    "octave" (280) 41
    "step" (281) 41
    "integer number" <std::string> (282) 5
    "double number" <std::string> (283) 6
    "single quoted_string" <std::string> (284) 7
    "double quoted_string" <std::string> (285) 8
    "name" <std::string> (286)
    "option" <std::string> (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    MnxSource (34)
        on left: 4
        on right: 0
    $@1 (35)
        on left: 1
        on right: 4
    $@2 (36)
        on left: 2
        on right: 4
    $@3 (37)
        on left: 3
        on right: 4
    Number <std::string> (38)
        on left: 5 6
        on right: 12 23 41
    SingleString <std::string> (39)
        on left: 7 8
        on right: 9 10
    String <std::string> (40)
        on left: 9 10
        on right: 10 23 32 36 41
    Mnx (41)
        on left: 11
        on right: 4
    Version (42)
        on left: 12
        on right: 11
    Global (43)
        on left: 13
        on right: 4
    Parts (44)
        on left: 14
        on right: 4
    Part (45)
        on left: 15
        on right: 14
    Measures (46)
        on left: 16
        on right: 13 15
    Measure (47)
        on left: 17
        on right: 16
    MeasureElements (48)
        on left: 18 19
        on right: 17 19
    MeasureElement (49)
        on left: 20 21
        on right: 18 19
    Clefs (50)
        on left: 22
        on right: 20
    Clef (51)
        on left: 23
        on right: 22
    Sequences (52)
        on left: 24
        on right: 21
    SequencesElements (53)
        on left: 25 26
        on right: 24 26
    SequencesElement (54)
        on left: 27
        on right: 25 26
    Content (55)
        on left: 28
        on right: 27
    ContentElements (56)
        on left: 29 30
        on right: 28 30
    ContentElement (57)
        on left: 31
        on right: 29 30
    Type (58)
        on left: 32
        on right: 31
    Duration (59)
        on left: 33
        on right: 31
    DurationElements (60)
        on left: 34 35
        on right: 33 35
    DurationElement (61)
        on left: 36
        on right: 34 35
    Notes (62)
        on left: 37
        on right: 31
    NotesElements (63)
        on left: 38 39
        on right: 37 39
    NotesElement (64)
        on left: 40
        on right: 38 39
    Pitch (65)
        on left: 41
        on right: 40


State 0

    0 $accept: • MnxSource $end

    "{"  shift, and go to state 1

    MnxSource  go to state 2


State 1

    4 MnxSource: "{" • Mnx $@1 "," Global $@2 "," Parts $@3 "}"

    "mnx"  shift, and go to state 3

    Mnx  go to state 4


State 2

    0 $accept: MnxSource • $end

    $end  shift, and go to state 5


State 3

   11 Mnx: "mnx" • ":" "{" Version "}"

    ":"  shift, and go to state 6


State 4

    4 MnxSource: "{" Mnx • $@1 "," Global $@2 "," Parts $@3 "}"

    $default  reduce using rule 1 ($@1)

    $@1  go to state 7


State 5

    0 $accept: MnxSource $end •

    $default  accept


State 6

   11 Mnx: "mnx" ":" • "{" Version "}"

    "{"  shift, and go to state 8


State 7

    4 MnxSource: "{" Mnx $@1 • "," Global $@2 "," Parts $@3 "}"

    ","  shift, and go to state 9


State 8

   11 Mnx: "mnx" ":" "{" • Version "}"

    "version"  shift, and go to state 10

    Version  go to state 11


State 9

    4 MnxSource: "{" Mnx $@1 "," • Global $@2 "," Parts $@3 "}"

    "global"  shift, and go to state 12

    Global  go to state 13


State 10

   12 Version: "version" • ":" Number

    ":"  shift, and go to state 14


State 11

   11 Mnx: "mnx" ":" "{" Version • "}"

    "}"  shift, and go to state 15


State 12

   13 Global: "global" • ":" "{" Measures "}"

    ":"  shift, and go to state 16


State 13

    4 MnxSource: "{" Mnx $@1 "," Global • $@2 "," Parts $@3 "}"

    $default  reduce using rule 2 ($@2)

    $@2  go to state 17


State 14

   12 Version: "version" ":" • Number

    "integer number"  shift, and go to state 18
    "double number"   shift, and go to state 19

    Number  go to state 20


State 15

   11 Mnx: "mnx" ":" "{" Version "}" •

    $default  reduce using rule 11 (Mnx)


State 16

   13 Global: "global" ":" • "{" Measures "}"

    "{"  shift, and go to state 21


State 17

    4 MnxSource: "{" Mnx $@1 "," Global $@2 • "," Parts $@3 "}"

    ","  shift, and go to state 22


State 18

    5 Number: "integer number" •

    $default  reduce using rule 5 (Number)


State 19

    6 Number: "double number" •

    $default  reduce using rule 6 (Number)


State 20

   12 Version: "version" ":" Number •

    $default  reduce using rule 12 (Version)


State 21

   13 Global: "global" ":" "{" • Measures "}"

    "parts"  shift, and go to state 23

    Measures  go to state 24


State 22

    4 MnxSource: "{" Mnx $@1 "," Global $@2 "," • Parts $@3 "}"

    "parts"  shift, and go to state 25

    Parts  go to state 26


State 23

   16 Measures: "parts" • ":" "[" Measure "]"

    ":"  shift, and go to state 27


State 24

   13 Global: "global" ":" "{" Measures • "}"

    "}"  shift, and go to state 28


State 25

   14 Parts: "parts" • ":" "[" Part "]"

    ":"  shift, and go to state 29


State 26

    4 MnxSource: "{" Mnx $@1 "," Global $@2 "," Parts • $@3 "}"

    $default  reduce using rule 3 ($@3)

    $@3  go to state 30


State 27

   16 Measures: "parts" ":" • "[" Measure "]"

    "["  shift, and go to state 31


State 28

   13 Global: "global" ":" "{" Measures "}" •

    $default  reduce using rule 13 (Global)


State 29

   14 Parts: "parts" ":" • "[" Part "]"

    "["  shift, and go to state 32


State 30

    4 MnxSource: "{" Mnx $@1 "," Global $@2 "," Parts $@3 • "}"

    "}"  shift, and go to state 33


State 31

   16 Measures: "parts" ":" "[" • Measure "]"

    "{"  shift, and go to state 34

    Measure  go to state 35


State 32

   14 Parts: "parts" ":" "[" • Part "]"

    "{"  shift, and go to state 36

    Part  go to state 37


State 33

    4 MnxSource: "{" Mnx $@1 "," Global $@2 "," Parts $@3 "}" •

    $default  reduce using rule 4 (MnxSource)


State 34

   17 Measure: "{" • MeasureElements "}"

    "sequences"  shift, and go to state 38
    "clefs"      shift, and go to state 39

    MeasureElements  go to state 40
    MeasureElement   go to state 41
    Clefs            go to state 42
    Sequences        go to state 43


State 35

   16 Measures: "parts" ":" "[" Measure • "]"

    "]"  shift, and go to state 44


State 36

   15 Part: "{" • Measures "}"

    "parts"  shift, and go to state 23

    Measures  go to state 45


State 37

   14 Parts: "parts" ":" "[" Part • "]"

    "]"  shift, and go to state 46


State 38

   24 Sequences: "sequences" • ":" "[" SequencesElements "]"

    ":"  shift, and go to state 47


State 39

   22 Clefs: "clefs" • ":" "[" Clef "]"

    ":"  shift, and go to state 48


State 40

   17 Measure: "{" MeasureElements • "}"
   19 MeasureElements: MeasureElements • MeasureElement

    "}"          shift, and go to state 49
    "sequences"  shift, and go to state 38
    "clefs"      shift, and go to state 39

    MeasureElement  go to state 50
    Clefs           go to state 42
    Sequences       go to state 43


State 41

   18 MeasureElements: MeasureElement •

    $default  reduce using rule 18 (MeasureElements)


State 42

   20 MeasureElement: Clefs •

    $default  reduce using rule 20 (MeasureElement)


State 43

   21 MeasureElement: Sequences •

    $default  reduce using rule 21 (MeasureElement)


State 44

   16 Measures: "parts" ":" "[" Measure "]" •

    $default  reduce using rule 16 (Measures)


State 45

   15 Part: "{" Measures • "}"

    "}"  shift, and go to state 51


State 46

   14 Parts: "parts" ":" "[" Part "]" •

    $default  reduce using rule 14 (Parts)


State 47

   24 Sequences: "sequences" ":" • "[" SequencesElements "]"

    "["  shift, and go to state 52


State 48

   22 Clefs: "clefs" ":" • "[" Clef "]"

    "["  shift, and go to state 53


State 49

   17 Measure: "{" MeasureElements "}" •

    $default  reduce using rule 17 (Measure)


State 50

   19 MeasureElements: MeasureElements MeasureElement •

    $default  reduce using rule 19 (MeasureElements)


State 51

   15 Part: "{" Measures "}" •

    $default  reduce using rule 15 (Part)


State 52

   24 Sequences: "sequences" ":" "[" • SequencesElements "]"

    "content"  shift, and go to state 54

    SequencesElements  go to state 55
    SequencesElement   go to state 56
    Content            go to state 57


State 53

   22 Clefs: "clefs" ":" "[" • Clef "]"

    ":"  shift, and go to state 58

    Clef  go to state 59


State 54

   28 Content: "content" • ":" "[" ContentElements "]"

    ":"  shift, and go to state 60


State 55

   24 Sequences: "sequences" ":" "[" SequencesElements • "]"
   26 SequencesElements: SequencesElements • SequencesElement

    "]"        shift, and go to state 61
    "content"  shift, and go to state 54

    SequencesElement  go to state 62
    Content           go to state 57


State 56

   25 SequencesElements: SequencesElement •

    $default  reduce using rule 25 (SequencesElements)


State 57

   27 SequencesElement: Content •

    $default  reduce using rule 27 (SequencesElement)


State 58

   23 Clef: ":" • "{" "sign" ":" String "," "staffPosition" ":" Number "}"

    "{"  shift, and go to state 63


State 59

   22 Clefs: "clefs" ":" "[" Clef • "]"

    "]"  shift, and go to state 64


State 60

   28 Content: "content" ":" • "[" ContentElements "]"

    "["  shift, and go to state 65


State 61

   24 Sequences: "sequences" ":" "[" SequencesElements "]" •

    $default  reduce using rule 24 (Sequences)


State 62

   26 SequencesElements: SequencesElements SequencesElement •

    $default  reduce using rule 26 (SequencesElements)


State 63

   23 Clef: ":" "{" • "sign" ":" String "," "staffPosition" ":" Number "}"

    "sign"  shift, and go to state 66


State 64

   22 Clefs: "clefs" ":" "[" Clef "]" •

    $default  reduce using rule 22 (Clefs)


State 65

   28 Content: "content" ":" "[" • ContentElements "]"

    "type"  shift, and go to state 67

    ContentElements  go to state 68
    ContentElement   go to state 69
    Type             go to state 70


State 66

   23 Clef: ":" "{" "sign" • ":" String "," "staffPosition" ":" Number "}"

    ":"  shift, and go to state 71


State 67

   32 Type: "type" • ":" String

    ":"  shift, and go to state 72


State 68

   28 Content: "content" ":" "[" ContentElements • "]"
   30 ContentElements: ContentElements • ContentElement

    "]"     shift, and go to state 73
    "type"  shift, and go to state 67

    ContentElement  go to state 74
    Type            go to state 70


State 69

   29 ContentElements: ContentElement •

    $default  reduce using rule 29 (ContentElements)


State 70

   31 ContentElement: Type • Duration Notes

    "duration"  shift, and go to state 75

    Duration  go to state 76


State 71

   23 Clef: ":" "{" "sign" ":" • String "," "staffPosition" ":" Number "}"

    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    SingleString  go to state 79
    String        go to state 80


State 72

   32 Type: "type" ":" • String

    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    SingleString  go to state 79
    String        go to state 81


State 73

   28 Content: "content" ":" "[" ContentElements "]" •

    $default  reduce using rule 28 (Content)


State 74

   30 ContentElements: ContentElements ContentElement •

    $default  reduce using rule 30 (ContentElements)


State 75

   33 Duration: "duration" • ":" "{" DurationElements "}"

    ":"  shift, and go to state 82


State 76

   31 ContentElement: Type Duration • Notes

    "duration"  shift, and go to state 83

    Notes  go to state 84


State 77

    7 SingleString: "single quoted_string" •

    $default  reduce using rule 7 (SingleString)


State 78

    8 SingleString: "double quoted_string" •

    $default  reduce using rule 8 (SingleString)


State 79

    9 String: SingleString •

    $default  reduce using rule 9 (String)


State 80

   10 String: String • SingleString
   23 Clef: ":" "{" "sign" ":" String • "," "staffPosition" ":" Number "}"

    ","                     shift, and go to state 85
    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    SingleString  go to state 86


State 81

   10 String: String • SingleString
   32 Type: "type" ":" String •

    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    $default  reduce using rule 32 (Type)

    SingleString  go to state 86


State 82

   33 Duration: "duration" ":" • "{" DurationElements "}"

    "{"  shift, and go to state 87


State 83

   37 Notes: "duration" • ":" "[" NotesElements "]"

    ":"  shift, and go to state 88


State 84

   31 ContentElement: Type Duration Notes •

    $default  reduce using rule 31 (ContentElement)


State 85

   23 Clef: ":" "{" "sign" ":" String "," • "staffPosition" ":" Number "}"

    "staffPosition"  shift, and go to state 89


State 86

   10 String: String SingleString •

    $default  reduce using rule 10 (String)


State 87

   33 Duration: "duration" ":" "{" • DurationElements "}"

    "base"  shift, and go to state 90

    DurationElements  go to state 91
    DurationElement   go to state 92


State 88

   37 Notes: "duration" ":" • "[" NotesElements "]"

    "["  shift, and go to state 93


State 89

   23 Clef: ":" "{" "sign" ":" String "," "staffPosition" • ":" Number "}"

    ":"  shift, and go to state 94


State 90

   36 DurationElement: "base" • ":" String

    ":"  shift, and go to state 95


State 91

   33 Duration: "duration" ":" "{" DurationElements • "}"
   35 DurationElements: DurationElements • DurationElement

    "}"     shift, and go to state 96
    "base"  shift, and go to state 90

    DurationElement  go to state 97


State 92

   34 DurationElements: DurationElement •

    $default  reduce using rule 34 (DurationElements)


State 93

   37 Notes: "duration" ":" "[" • NotesElements "]"

    "pitch"  shift, and go to state 98

    NotesElements  go to state 99
    NotesElement   go to state 100
    Pitch          go to state 101


State 94

   23 Clef: ":" "{" "sign" ":" String "," "staffPosition" ":" • Number "}"

    "integer number"  shift, and go to state 18
    "double number"   shift, and go to state 19

    Number  go to state 102


State 95

   36 DurationElement: "base" ":" • String

    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    SingleString  go to state 79
    String        go to state 103


State 96

   33 Duration: "duration" ":" "{" DurationElements "}" •

    $default  reduce using rule 33 (Duration)


State 97

   35 DurationElements: DurationElements DurationElement •

    $default  reduce using rule 35 (DurationElements)


State 98

   41 Pitch: "pitch" • ":" "{" "octave" ":" Number "," "step" ":" String "}"

    ":"  shift, and go to state 104


State 99

   37 Notes: "duration" ":" "[" NotesElements • "]"
   39 NotesElements: NotesElements • NotesElement

    "]"      shift, and go to state 105
    "pitch"  shift, and go to state 98

    NotesElement  go to state 106
    Pitch         go to state 101


State 100

   38 NotesElements: NotesElement •

    $default  reduce using rule 38 (NotesElements)


State 101

   40 NotesElement: Pitch •

    $default  reduce using rule 40 (NotesElement)


State 102

   23 Clef: ":" "{" "sign" ":" String "," "staffPosition" ":" Number • "}"

    "}"  shift, and go to state 107


State 103

   10 String: String • SingleString
   36 DurationElement: "base" ":" String •

    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    $default  reduce using rule 36 (DurationElement)

    SingleString  go to state 86


State 104

   41 Pitch: "pitch" ":" • "{" "octave" ":" Number "," "step" ":" String "}"

    "{"  shift, and go to state 108


State 105

   37 Notes: "duration" ":" "[" NotesElements "]" •

    $default  reduce using rule 37 (Notes)


State 106

   39 NotesElements: NotesElements NotesElement •

    $default  reduce using rule 39 (NotesElements)


State 107

   23 Clef: ":" "{" "sign" ":" String "," "staffPosition" ":" Number "}" •

    $default  reduce using rule 23 (Clef)


State 108

   41 Pitch: "pitch" ":" "{" • "octave" ":" Number "," "step" ":" String "}"

    "octave"  shift, and go to state 109


State 109

   41 Pitch: "pitch" ":" "{" "octave" • ":" Number "," "step" ":" String "}"

    ":"  shift, and go to state 110


State 110

   41 Pitch: "pitch" ":" "{" "octave" ":" • Number "," "step" ":" String "}"

    "integer number"  shift, and go to state 18
    "double number"   shift, and go to state 19

    Number  go to state 111


State 111

   41 Pitch: "pitch" ":" "{" "octave" ":" Number • "," "step" ":" String "}"

    ","  shift, and go to state 112


State 112

   41 Pitch: "pitch" ":" "{" "octave" ":" Number "," • "step" ":" String "}"

    "step"  shift, and go to state 113


State 113

   41 Pitch: "pitch" ":" "{" "octave" ":" Number "," "step" • ":" String "}"

    ":"  shift, and go to state 114


State 114

   41 Pitch: "pitch" ":" "{" "octave" ":" Number "," "step" ":" • String "}"

    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    SingleString  go to state 79
    String        go to state 115


State 115

   10 String: String • SingleString
   41 Pitch: "pitch" ":" "{" "octave" ":" Number "," "step" ":" String • "}"

    "}"                     shift, and go to state 116
    "single quoted_string"  shift, and go to state 77
    "double quoted_string"  shift, and go to state 78

    SingleString  go to state 86


State 116

   41 Pitch: "pitch" ":" "{" "octave" ":" Number "," "step" ":" String "}" •

    $default  reduce using rule 41 (Pitch)
